--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,96 @@ body {
   align-items: center;
   min-height: 100vh;
 }
+
+.container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .card {
+  position: relative;
+  width: 600px;
+  height: 350px;
+  margin: 20px;
+  display: flex;
+  transition: 0.5s;
+  justify-content: flex-start;
+  align-items: center;
+  background: linear-gradient(45deg, #1a2f3f, #7094ce);
+}
+
+.container .card img {
+  position: absolute;
+  bottom: 0;
+  left: 35%;
+  transform: translateX(-50%);
+  height: 500px;
+  transition: 0.5s;
+}
+.container .card:hover img {
+  left: 60%;
+  height: 600px;
+}
+
+.container .card .content {
+  position: relative;
+  width: 35%;
+  left: 20%;
+  padding: 20px 20px 20px 40px;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.container .card:hover .content {
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+}
+
+.container .card .content h2 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 2.2em;
+  line-height: 1em;
+}
+
+.container .card .content p {
+  color: #fff;
+}
+
+.container .card .content a {
+  position: relative;
+  color: #111;
+  background: #fff;
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 10px;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+@media (max-width: 991px) {
+  .container .card {
+    width: auto;
+    max-width: 500px;
+    align-items: flex-start;
+    left: 5%;
+  }
+  .container .card:hover {
+    height: 600px;
+  }
+  .container .card:hover img {
+    left: 50%;
+    height: 400px;
+  }
+  .container .card .container {
+    width: 100%;
+    left: 0;
+    padding: 40px;
+  }
+}
+@media (max-width: 767px) {
+}
